# testgui

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: apply_patch.cmake
cmake/modules/: flags.cmake  git_info.cmake  version_info.cmake
cmake/modules/custom/: custom_flags.cmake  custom_tools.cmake
cmake/modules/git_info/: git_info.hpp.in  update_git_info.cmake
cmake/modules/version_info/: version_info.hpp.in
src/: WinMain.cpp  main.cpp  tmpicons.cpp  tmpicons.hpp
src/utils/: config.cpp  config.hpp  log.cpp  log.hpp  path_utils.cpp  path_utils.hpp  store_sink.hpp  thread_pool.hpp
src/view/: font.cpp  font.hpp
src/view/components/: IconsFinder.cpp  IconsFinder.hpp  ImSpinnerDemo.cpp  ImSpinnerDemo.hpp  InterfaceStyleEditor.cpp  InterfaceStyleEditor.hpp  LogViewer.cpp  LogViewer.hpp  TextEditorDemo.cpp  TextEditorDemo.hpp  TextEditorStyleEditor.cpp  TextEditorStyleEditor.hpp
src/view/setup/: gl3w.cpp  gl3w.hpp  glfw.cpp  glfw.hpp  imgui.cpp  imgui.hpp  implot.cpp  implot.hpp  window.cpp  window.hpp
src/view/style/: colors.hpp  imgui.cpp  imgui.hpp  utils.cpp  utils.hpp
src/view/utils/: Window.hpp
